--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="media/style.css">
 </head>
-<body>
+<body onresize="mudouTamanho">
     <header>
         <h1>"Desenha-me um carneiro?"</h1>
-        <menu>
+        <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">
+            menu
+            </span>
+        <menu id="itens">
             <ul>
                 <li><a href="https://www.recantodasletras.com.br/resenhas/196309"">Home </a></li>
                 <li><a href="">Crédito</a></li>
@@ -56,5 +61,23 @@
 </p>
        
     </footer>
+
+    <script>
+        function mudouTamanho() {
+            if (window.innerwidth >= 768) {
+                itens.style.display == "block"
+            } else {
+                itens.style.display = "none"
+            }
+        }
+
+        function clickMenu() {
+           if (itens.style.display == "block" ) {
+               itens.style.display = "none"
+           } else {
+               itens.style.display = "block"
+           }
+        }
+    </script>
 </body>
 </html>
