--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 
           <p>O Pequeno Príncipe vivia sozinho num planeta do tamanho de uma casa que tinha três vulcões. O orgulho da rosa, que também vivia no planeta do Pequeno Príncipe, arruinou a tranqüilidade e o levou a uma viagem que o trouxe finalmente a Terra, onde encontrou a raposa que o levou a começar a descobrir o que é realmente importante na vida – o amor, a amizade e o companheirismo. Assim, cada personagem mostra o quanto às “pessoas grandes” se preocupam com coisas inúteis e não dão o devido valor às coisas. Isso tudo pode ser traduzido por uma frase da raposa, personagem que ensina ao menino de cabelos dourados o segredo da amizade:</p>
 
- <p>“Só se vê bem com o coração, o essencial é invisível aos olhos”.</p>
+ <section id="foto1">
+     <p>“Só se vê bem com o coração, o essencial é invisível aos olhos”.</p>
+ </section> <br>
 
 		<p>Antonie Jean Baptiste Marie Roger de Saint-Exupery, foi um escritor de grande sensibilidade, com uma delicada preocupação com o sentido do humano e da existência. Em uma narrativa poética, vai elaborando sua visão de mundo e mergulha no próprio inconsciente, em uma obra aparentemente simples, mais apenas aparentemente. O livro devolve a cada um o mistério escondido em nossa alma. De repente retornamos aos nossos sonhos infantis e reaparece a lembrança de questionamentos acomodados, quase já imperceptíveis na pressa do dia a dia. Voltam ao coração escondidas recordações. Um reencontro pessoal com a criança que nos habita.</p>
 
@@ -45,11 +47,15 @@
         Há obras que de alguma forma são capazes de transformar o leitor. Esta é uma delas, que transmite uma experiência muito particular. Uma historia bonita que traz ensinamentos sobre amizade e companheirismo:
 </p>
 
- <p>“Tu te tornas eternamente responsável por aquilo que cativas”.</p>
+ <section id="foto2">
+     <p>“Tu te tornas eternamente responsável por aquilo que cativas”.</p>
+ </section>
 
             <p>Este não é um livro para criança como a maioria das pessoas pensa, é um livro que traz a mensagem da infância. A criança que esta guardada no nosso coração e na qual reconhece nossos olhos, nosso sorriso, nossa alma... É o mundo onde vivemos e o qual podemos mudar. Se não o quisermos compreender e não nos interessarmos pelas palavras de Saint-Exupery, fica uma das sentenças do Príncipe:</p>
 
-<p>“Tu não és um homem de verdade. Tu não passas de um cogumelo.”</p>
+<section id="foto3">
+    <p>“Tu não és um homem de verdade. Tu não passas de um cogumelo.”</p>
+</section>
             </article>
         </main>
     </header>
